--- a/dezevitz.github.io/_config.yml
+++ b/dezevitz.github.io/_config.yml
@@ -26,7 +26,7 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: spectral
+remote_theme: arkadianriver/spectral
 plugins:
   - jekyll-feed
 
