--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "portfolio",
+  "name": "dezevitz.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://dezevitz.github.io/home",
+  "homepage": "http://dezevitz.github.io/dezevitz.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
