--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dezevitz.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://dezevitz.github.io/dezevitz.github.io",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
